--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,15 @@ readme = "README.md"
 arrayvec = "0.4"
 error-chain = "0.11"
 ethabi = "5.1"
+ethcore = { path = "../parity/ethcore" }
+ethcore-transaction = { path = "../parity/ethcore/transaction" }
+ethkey = { path = "../parity/ethkey" }
 ethereum-types = "0.3"
 futures = "0.1"
 jsonrpc-core = "8.0.1"
 log = "0.4"
 parking_lot = "0.5"
+rlp = { path = "../parity/util/rlp" }
 rustc-hex = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
